--- a/payment-methods-project/package.json
+++ b/payment-methods-project/package.json
@@ -30,5 +30,12 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  }
+  },
+  "scripts": {
+   "start": "react-scripts start",
+   "build": "react-scripts build",
+   "test": "react-scripts test",
+   "eject": "react-scripts eject"
 }
+}
+
